Optimize loading tasks